--- a/package.json
+++ b/package.json
@@ -10,23 +10,36 @@
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
-    "@headlessui/react": "^1.7.13",
+    "@babel/plugin-syntax-jsx": "^7.21.4",
+    "@babel/plugin-transform-runtime": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/runtime": "^7.21.0",
+    "@babel/runtime-corejs3": "^7.21.0",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.12",
     "clsx": "^1.2.1",
+    "face-api.js": "^0.22.2",
     "focus-visible": "^5.2.0",
+    "fs": "^0.0.1-security",
     "next": "13.3.0",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-speech-recognition": "^3.10.0",
     "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
+    "@types/node": "18.15.12",
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.2.6",
-    "sharp": "^0.32.0"
+    "sharp": "^0.32.0",
+    "typescript": "^5.0.4"
   }
 }
