--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "face-api.js": "^0.22.2",
     "focus-visible": "^5.2.0",
     "fs": "^0.0.1-security",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
     "next": "13.3.0",
     "postcss-focus-visible": "^6.0.4",
     "react": "18.2.0",
