--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^2.0.17",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
+    "@vercel/analytics": "^1.0.0",
     "autoprefixer": "^10.4.12",
     "clsx": "^1.2.1",
     "face-api.js": "^0.22.2",
